--- a/styles.css
+++ b/styles.css
@@ -101,7 +101,26 @@
 .data-container .info-ip div p{
     font-weight: bolder;
     margin-top: 9px;
- }
+}
+
+.error-message  {
+   /*  border: solid green 1px; */
+    height: 100%;
+    text-align: center;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: tomato;
+    font-weight: bolder;
+}
+
+.error-message div {
+    height: 100%;
+   /*  border: solid red; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
 
 
 @media screen and (max-width : 899px) {
